compiler/testData/diagnostics/tests/varargs/unresolvedVarargType.kt
fun testVarArgs(<!FORBIDDEN_VARARG_PARAMETER_TYPE!>vararg<!> v: <!UNRESOLVED_REFERENCE!>Smth<!>) {}
